# good-guesser-py

./: .gitignore  README.md  example.py  good_guesser.py  pyproject.toml  setup.cfg  test.py
examples/: num_squares.py
good_guesser/: __init__.py  square_grid.py
tests/: test_good_guesser.py
tests/examples/: test_num_squares.py
