[tool.poetry]
name = "good_guesser"
version = "0.1.0"
description = ""
authors = ["catsocks <3389801+catsocks@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
