[tool.poetry]
name = "good_guesser"
version = "0.1.0"
description = ""
authors = ["catsocks <3389801+catsocks@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
edn-format = "^0.7.5"
more-itertools = "^8.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-profiling = "^1.7.0"
pytest-cov = "^3.0.0"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
